fix save-to-list action button on mobile
needs lightly different HTML to work on mobile
only relevant because of our save-to-lists.js feature

--- a/catalog-scss/_header.scss
+++ b/catalog-scss/_header.scss
@@ -5,5 +5,11 @@
 }
 
 .main-logo img {
-    max-width: 400px;
+    max-width: 100%;
+}
+
+@media screen and (min-width: 400px) {
+    .main-logo img {
+        max-width: 400px;
+    }
 }
